force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__IsLwcEnabled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsLwcEnabled__c</fullName>
    <formula>vlocity_ps__OmniScriptId__r.vlocity_ps__IsLwcEnabled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Web Component Enabled</label>
    <type>Checkbox</type>
</CustomField>