force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__LastSaved__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LastSaved__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Saved</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>