force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ObjectId__c</fullName>
    <label>Object Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>