force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__ObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ObjectLabel__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>