force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ObjectType__c</fullName>
    <label>Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>