force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__OmniScriptLanguage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OmniScriptLanguage__c</fullName>
    <formula>TEXT(vlocity_ps__OmniScriptId__r.vlocity_ps__Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OmniScript Language</label>
    <type>Text</type>
</CustomField>