force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__OmniScriptVersion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OmniScriptVersion__c</fullName>
    <formula>vlocity_ps__OmniScriptId__r.vlocity_ps__Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OmniScript Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>