force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/fields/vlocity_ps__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferenceNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Reference Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>