force-app/main/default/objects/vlocity_ps__OmniScriptInstance__c/listViews/vlocity_ps__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ps__All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>vlocity_ps__ObjectLabel__c</columns>
    <columns>vlocity_ps__LastSaved__c</columns>
    <columns>vlocity_ps__ResumeLink__c</columns>
    <columns>vlocity_ps__Status__c</columns>
    <columns>vlocity_ps__ObjectId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>